# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//chrome/browser/resources/settings/settings.gni")
import("//ui/webui/resources/tools/js_modulizer.gni")
import("../namespace_rewrites.gni")

js_modulizer("modulize") {
  input_files = [
    "about_page_tests.js",
    "appearance_fonts_page_test.js",
    "appearance_page_test.js",
    "checkbox_tests.js",
    "controlled_button_tests.js",
    "controlled_radio_button_tests.js",
    "default_browser_browsertest.js",
    "downloads_page_test.js",
    "dropdown_menu_tests.js",
    "extension_controlled_indicator_tests.js",
    "fake_settings_private.js",
    "on_startup_page_tests.js",
    "prefs_test_cases.js",
    "prefs_tests.js",
    "pref_util_tests.js",
    "search_engines_page_test.js",
    "search_page_test.js",
    "settings_animated_pages_test.js",
    "settings_menu_test.js",
    "settings_slider_tests.js",
    "settings_subpage_test.js",
    "settings_textarea_tests.js",
    "settings_toggle_button_tests.js",
    "site_favicon_test.js",
    "startup_urls_page_test.js",
    "test_about_page_browser_proxy.js",
    "system_page_tests.js",
    "test_extension_control_browser_proxy.js",
    "test_lifetime_browser_proxy.js",
    "test_search_engines_browser_proxy.js",
    "test_util.js",
  ]
  namespace_rewrites = settings_namespace_rewrites + test_namespace_rewrites + [
                         "settings.FakeSettingsPrivate|FakeSettingsPrivate",
                         "settings.TestLifetimeBrowserProxy|TestLifetimeBrowserProxy",
                         "settings_search.createSampleSearchEngine|createSampleSearchEngine",
                         "settings_search.TestSearchEnginesBrowserProxy|TestSearchEnginesBrowserProxy",
                         "settings.TestLifetimeBrowserProxy|TestLifetimeBrowserProxy",
                         "test_util.setupPopstateListener|setupPopstateListener",
                       ]
}
