# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [
    "indexed_db_control.mojom",
    "indexed_db_control_test.mojom",
    "local_storage_control.mojom",
    "native_file_system_context.mojom",
    "origin_context.mojom",
    "partition.mojom",
    "service_worker_database.mojom",
    "session_storage_control.mojom",
    "storage_service.mojom",
  ]

  public_deps = [
    "//mojo/public/mojom/base",
    "//third_party/blink/public/mojom:mojom_platform",
    "//url/mojom:url_mojom_origin",
  ]

  overridden_deps = [ "//third_party/blink/public/mojom:mojom_platform" ]
  component_deps = [ "//third_party/blink/public/common" ]
}

mojom("test_api") {
  testonly = true
  sources = [ "test_api.test-mojom" ]
}
