# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ios/asset_catalog.gni")
import("//build/config/ios/rules.gni")

group("resources") {
  deps = [ ":consent_illustration" ]
}

imageset("consent_illustration") {
  sources = [
    "consent_illustration.imageset/Contents.json",
    "consent_illustration.imageset/illustration_dark.png",
    "consent_illustration.imageset/illustration_light.png",
  ]
}
